Refactor to improve toString security (avoid logging apiKey)
Replaced deprecated stream operations with toList() for better readability and performance. Also updated the toString method of OpenAiEmbeddingModelBuilder to use StringJoiner for clearer and more maintainable code.